# cugo_ros_control

./: CMakeLists.txt  README.md  package.xml  setup.py
config/gnss/: D9CX1.yaml
config/gnss_localization/: amcl_and_gnss_localization.yaml  gnss_localization.yaml  gnss_odom_publisher.yaml
config/gnss_nav/: ekf_with_gps.yaml
config/gnss_odom/: ekf_with_gps.yaml  navsat_transform.yaml
config/imu/: wt901.yml
config/laser_filters/: v3ros_filter.yaml
config/navigation/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  nav2_params.yaml  nav2_tsukuba_params.yaml
config/sensors/: D9CX1.yaml  RT-USB-9axisIMU2.yml  v3ros_filter.yaml
config/slam/: cugo_lds_2d.lua  cugo_lds_2d_indoor.lua  cugo_lds_2d_outdoor.lua
include/cugo_controller/: cugo_controller.hpp
include/cugo_ros2_control/: cugo_ros2_control.hpp
install/: install.sh  install_dev.sh
laser_filters/: CuGo_filter.yaml
launch/: cugo_bringup_launch.py  cugo_cartgrapher.launch  cugo_ros2_control_launch.py  cugo_ros_control.launch  cugo_tsukuba_bringup_launch.py  gnss_odom_launch.py  gnss_test_launch.py  imu_bringup.py  lidar_bringup.py  loc_cugo_ros2_control_launch.py  ps4_controller.launch  rec_cugo_ros2_control_launch.py  rplidar_cugov3.launch  setup.py  sim_localization_cugo_ros2_control_launch.py  start_any_apps.launch  start_cugo_controller.launch  start_keyboard.launch  start_ps4_controller.launch  teleop_keyboard.launch  ublox_bringup.py  view_ros2_rplidar_s2e_w_filter_launch.py  view_rplidar_s2e_w_filter.launch
map/: map_white.yaml  put_map_here
maps/: cuborex_building.pgm  map.yaml
rviz/: cugo_navigation.rviz
scripts/: CuGoPy_Controller_node.py
src/: cugo_controller.cpp  cugo_ros2_control.cpp  cugo_ros_control.cpp
(+41 files in other folders)
